--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.url=${DB_DATABASE_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
+logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+spring.h2.console.enabled=true
+
+
