Oprettet test-klasse med de korrekte beans osv.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.password=${DB_PASSWORD}
 logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 spring.h2.console.enabled= true
 
-
+server.error.whitelabel.enabled=false
