Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_wishlist.yml
+++ b/.github/workflows/main_wishlist.yml
@@ -37,22 +37,13 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-  
+      
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: java-app
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C1929AACA99948F19ED492BD39D7ECAB }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6C181B219F324046BBA9F62507D32861 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_301F9EB7C0394A539ABCF9148C287EA0 }}
-
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -60,4 +51,4 @@ jobs:
           app-name: 'Wishlist'
           slot-name: 'Production'
           package: '*.jar'
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_70E08781499344248758CB620D49BEE3 }}
