Oprettet test-klasse med de korrekte beans osv.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 spring.h2.console.enabled= true
 
 server.error.whitelabel.enabled=false
+server.port=80
