--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=Wishlist
+spring.profiles.active=prod
+
 department.repository.impl=DEPARTMENT_REPOSITORY
 
 spring.datasource.url=${DB_DATABASE_URL}
@@ -9,7 +11,6 @@ logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 spring.h2.console.enabled= true
 
 server.error.whitelabel.enabled=false
-
 
 
 spring.thymeleaf.prefix=classpath:/templates/
