Oprettet test-klasse med de korrekte beans osv.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 spring.mvc.static-path-pattern=/**
+server.port=80
