--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 spring.h2.console.enabled= true
 
 server.error.whitelabel.enabled=false
+server.port=80
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
