--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
 logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
-spring.h2.console.enabled= true
+spring.h2.console.enabled= false
+server.port=3306
 
 server.error.whitelabel.enabled=false
 
