--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,12 @@ spring.application.name=Wishlist
 
 department.repository.impl=DEPARTMENT_REPOSITORY
 
-
 spring.datasource.url=${DB_DATABASE_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
 logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
-spring.h2.console.enabled= false
+spring.h2.console.enabled= true
 
 server.port=80
 
